--- a/cs.html
+++ b/cs.html
@@ -15,7 +15,7 @@
     <!-- main css -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- icon -->
-    <link rel="icon" href="assets/img/logo/moneyzee-logo-bar.svg">
+    <link rel="icon" href="assets/img/logo/ipm.png">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
