--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- main css -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- icon -->
-    <link rel="icon" href="assets/img/logo/moneyzee-logo-bar.svg">
+    <link rel="icon" href="assets/img/logo/ipm.png">
     <!-- Animate Css -->
     <link
     rel="stylesheet"
@@ -80,7 +80,7 @@
 
     <!-- home section start -->
     <section class="jumbotron jumbotron-flui">
-        <div class="home d-flex align-items-center animate">
+        <div class="home d-flex align-items-center animate__animated animate__fadeInDown">
             <div class="container">
                 <div class="home-text">
                     <img src="assets/img/logo/ipm.png" alt="" width="300px">
